<resources>
    <string name="app_name">MVMR</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string-array name="known_sm">
        <item>com.facebook.katana, facebook</item>
        <item>com.whatsapp, whatsapp</item>
        <item>com.google.android.talk, hangouts</item>
        <item>com.skype.raider, skype</item>
        <item>com.twitter.android, twitter</item>
        <item>com.reddit.frontpage, reddit</item>
        <item>com.valvesoftware.android.steam.community, steam</item>
    </string-array>
    <string-array name="survey">
        <item>I often think about my mobile phone when I am not using it</item>
        <item>I often use my mobile phone for no particular reason</item>
        <item>Arguments have arisen with others because of my mobile phone use</item>
        <item>I interrupt whatever else I do when I am contacted on my mobile phone</item>
        <item>I feel connected to others when I use my mobile phone</item>
        <item>I lose track of times I use my mobile phone</item>
        <item>The thought of being without my mobile phone makes me feel distressed</item>
        <item>I have been unable to reduce the number of times I use my mobile phone</item>
        <item>I am comfortable using mobile phone technology</item>
        <item>I feel confident using mobile phone technology</item>

        <item>I have reported being mobile bullied</item>
        <item>There are mobile bullying interventions at school or at home</item>
        <item>These interventions work efficiently</item>
        <item>I have reported being mobile bullied to any law enforcement (SAPS)</item>
        <item>I have reported being mobile bullied to my friends.</item>
        <item>I have reported being mobile bullied to my parents or family.</item>
        <item>I have reported being mobile bullied to the school.</item>
        <item>I have reported being bullied to Social Media Apps (e.g. Facebook, Twitter, Instagram)</item>
        <item>I have reported being bullied to Chat Apps (e.g. Hangouts, WhatsApp,BBM)</item>
        <item>Reporting on social media apps and chat apps is effective</item>
        <item>Fear influences whether I report mobile bullying.</item>
        <item>Shock/Surprise influences whether I report mobile bullying.</item>
        <item>Anger influences whether I report mobile bullying.</item>
        <item>Sadness influences whether I report mobile bullying.</item>
        <item>Other emotions influences whether I report mobile bullying.</item>
        <item>The benefits of reporting outweigh the consequences of reporting.</item>
    </string-array>
    <string-array name="ratings">
        <item>Please rate how the MVMR application looks</item>
        <item>Please rate the quality of the MVMR application</item>
        <item>Please rate the font size and text of the MVMR application</item>
        <item>Are you able to access the MVMR application easily?</item>
        <item>Is the MVMR application available when you need it?</item>
        <item>Was the “How to Page” of the MVMR application informative or useful?</item>
        <item>Was the “About Page” of the MVMR application informative or useful?</item>
        <item>Please rate the ”Report Page” of the MVMR application?</item>
        <item>Does the “Report Page” capture what you feel it should capture?</item>
        <item>Is uploading an image in the Report Page” useful?</item>
        <item>On the home page of the MVMR application, your mobile phone usage is shown. Please rate the usefulness of this feature.</item>
    </string-array>
    <string-array name="report_platform_entries">
        <item>What platform did it occur on?</item>
        <item>Voice Call</item>
        <item>Text Message</item>
        <item>WhatsApp</item>
        <item>Hangouts</item>
        <item>BBM</item>
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Instagram</item>
        <item>Qoohme</item>
        <item>Other</item>
    </string-array>
    <string-array name="report_victim_entries">
        <item>Were you the victim?</item>
        <item>Yes</item>
        <item>No</item>
        <item>Rather not say</item>
    </string-array>
    <string-array name="grade_entries">
        <item>What Grade are you in?</item>
        <item>Grade 8</item>
        <item>Grade 9</item>
        <item>Grade 10</item>
        <item>Grade 11</item>
        <item>Grade 12</item>
    </string-array>
    <string-array name="race_entries">
        <item>What Race are you?</item>
        <item>African</item>
        <item>Asian</item>
        <item>Coloured</item>
        <item>Indian</item>
        <item>White</item>
        <item>Other</item>
    </string-array>
    <string-array name="sex_entries">
        <item>What Sex are you?</item>
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="age_entries">
        <item>How old are you?</item>
        <item>13 and below</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18 and above</item>
    </string-array>
    <string name="report_victim_text">Were you the victim?</string>
    <string name="report_platform_text">What platform did it occur on?</string>
    <string name="survey_instructions">Please respond to each of the questions on the page by selecting one the options. Select the Submit button to send the results</string>
    <string name="title_activity_survey">Survey</string>
    <string name="lorem">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it?It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).

    </string>
    <string name="about1">
        Many different forms of technology may be used to carry out cyberbullying. When cyberbullying is carried out through the use of mobile phones, it is known as mobile bullying. Kowalski et al. (2008) have defined mobile bullying as a form of cyberbullying through email, chatrooms, instant messaging and small text messages using mobile phones.
    </string>
    <string name="about2">
        Mobile victimisation is in turn is the result of mobile bullying. Victimisation has often been studied as an act that stems from bullying. Coincidentally, similar definitions have been given for both victimisation and bullying. Meaning that those people who are bullied are victims of bullying as they would have been victimised through the process of bullying. As a result, victimisation can be said to be a result of the activity of bullying.
    </string>
    <string name="about3">
        It has been found that the experience of school and electronic victimisation is associated with loneliness, peer rejection, lower self-esteem and self-efﬁcacy, higher stress, anxiety, and depressive symptoms which at times are found to be at high levels among youthful populations.
Victimisation is often unpredictable, unpreventable and unexpected. It frightens and unsettles victims, leaving them confused, frustrated, fearful and angry. In some case, especially among adolescents, cyberbullying (in general) has left victims feeling helpless, vulnerable and subsequently suicidal. According to Hinduja and Patchin (2010), there exists a relationship between bullying and suicide and they found that cyberbullying is related to high suicidal ideation among youth. As a result, victims of cyberbullying are more likely to consider suicide due to the negative impacts of bullying (Collins, 2012; North Shore-Long Island Jewish (LIJ) Health System, 2015).
    </string>
    <string name="about4">
Bearing in mind the negative consequences of mobile victimisation and the vast impact it has had on many students, the MVMR app aims to be a  digitally based tool that may be used as an intervention method. This app aims to be useful in the monitoring and reporting of mobile victimisation, especially among high school students. Thereby creating a means by which their victimisation may be known and addressed.
    </string>
    <string name="about5">
In monitoring and reporting mobile victimisation using the MVRM app, it is intended not only to intervene mobile victimisation but also to understand it further so that awareness of mobile victimisation is created and the development of laws and policies that control mobile bullying  and victimisation may be better informed.
    </string>
    <string name="howTo1">
Mobile bullying is a form of cyberbullying through email, chatrooms, social media, instant messaging and small text messages using mobile phones. Mobile victimisation is what someone who is bullied over the phone experiences.
    </string>
    <string name="howTo2">
This app was created so that you may be be able to monitor and report mobile victimisation. To do so, please follows steps 1 and 2 below.
    </string>
    <string name="howTo3">
Please ensure you have a data connection and take the survey on the next page. This is so that we may have some understanding of the manner in which you have been using your mobile phone. Which will help identify the likelihood of mobile victimisation.
    </string>
    <string name="howTo4">
After the survey, you can report on mobile victimisation and view sources which may inform you on how to cope with mobile victimisation.
    </string>
    <string name="howTo5">
Please keep a look out for your daily and weekly usage on the Home Page of the MVMR Application.
    </string>
    <string name="howTo6">
Please, whenever you are free, RATE THIS APP on the page named “Rate MVMR”. It will not take up much of your time and you may rate it at any point in time, but please do so after you have familiarized yourself with the application.
    </string>
    <string name="comment_interface">What do you think about the interface?</string>
    <string name="comment_access">What do you think about the accessibility?</string>
    <string name="comment_about">What do you think about the About Page?</string>
    <string name="comment_howTo">What do you think about the How To Page?</string>
    <string name="comment_report">What do you think about the Report Page?</string>
    <string name="comment_general">What do you think of the MVMR App in general?</string>
    <string name="comment_statistics">What do you think about the usage statistics?</string>
    <string name="thankYouRate">Thank you for testing MVMR. Your participation is greatly appreciated! Please help us in evaluating MVMR for future developments by rating the following features below.</string>
    <string name="optionalComments">Below, where possible, please comment in more detail what you think of the features.</string>
</resources>