<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="reporting.mvmr.HomeNoSurveyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_howto" />

            <TextView
                android:id="@+id/text_howTo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp"
                android:text="@string/howTo1" />

            <TextView
                android:id="@+id/text_howTo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/howTo2" />

            <TextView
                android:id="@+id/header_howTo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:text="Step 1"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_howTo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/howTo3" />

            <TextView
                android:id="@+id/header_howTo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="Step 2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_howTo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/howTo4" />

            <TextView
                android:id="@+id/header_howTo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="Step 3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_howTo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/howTo5" />

            <TextView
                android:id="@+id/header_howTo6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="Step 4"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_howTo6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/howTo6" />

            <Button
                android:id="@+id/survey_button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="20dp"
                android:text="Survey" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
