<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mvmr.mvmr.AboutActivity"
    tools:showIn="@layout/activity_about"
    android:background="@color/white">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header_about1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:text="What is Mobile Bullying?"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_about1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_about1"
                android:text="@string/about1" />

            <TextView
                android:id="@+id/header_about2"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_about1"
                android:layout_marginBottom="8dp"
                android:text="What is Mobile Victimisation"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_about2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_about2"
                android:text="@string/about2" />

            <TextView
                android:id="@+id/header_about3"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_about2"
                android:layout_marginBottom="8dp"
                android:text="Consequences of Mobile Victimisation"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_about3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_about3"
                android:text="@string/about3" />

            <TextView
                android:id="@+id/header_about4"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_about3"
                android:layout_marginBottom="8dp"
                android:text="Mission of MVMR"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_about4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_about4"
                android:text="@string/about4" />

            <TextView
                android:id="@+id/header_about5"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_about4"
                android:layout_marginBottom="8dp"
                android:text="Vision"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_about5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_about5"
                android:text="@string/about5" />


        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
